<resources>
    <string name="app_name">Demo_MVP</string>
    <string name="username">用户名</string>
    <string name="pwd">密码</string>
    <string name="login">登录</string>
    <string name="err_tip">用户名或密码不能为空</string>
    <string name="login_success">登录成功</string>
    <string name="welcome_db">欢迎来到数据库操作页面</string>
    <string name="db_query">条件查询</string>
    <string name="db_add">增加</string>
    <string name="db_delete">删除</string>
    <string name="db_update">修改</string>
    <string name="db_query_all">查询全部</string>
    <string name="db_no_data">数据库中还没有数据</string>
    <string name="request_nectwork">去网上看看</string>
    <string name="getpngpicture">获取所有png图片</string>
</resources>
